--- a/css/styles.css
+++ b/css/styles.css
@@ -10,32 +10,33 @@
   box-sizing: border-box;
 }
 
-/* Declare global font-size for em unit usage through :root. */
+/* 0. reset default element margins & paddings */
+/* 1. set basic default styles. */
 :root{
-  font-size: 16px;
-  font-family: Helvetica, Arial, sans-serif;
+  font-size: 16px; /* 1. */
+  font-family: Helvetica, Arial, sans-serif; /* 1. */
 }
 
-/* reset default element margins & paddings */
 body * {
-  margin: 0;
-  padding: 0;
+  margin: 0; /* 0. */
+  padding: 0; /* 0. */
 }
 
 body {
-  background: #222;
-  text-align: center;
-  position: relative;
+  background: #222; /* 1. */
+  text-align: center; /* 1. */
+  position: relative; /* 1. */
 }
 
 hr {
-  margin: 0 0.5rem 0 0.5rem;
-  border-width: 0;
-  height: 0.066rem;
-  border-color: #999;
-  background: #999;
+  margin: 0.5rem; /* 1. */
+  border-width: 0; /* 0. */
+  height: 0.066rem; /* 1. */
+  border-color: #999; /* 1. */
+  background: #999; /* 1. */
 }
 
+/* Canavas for card */
 #canvas {
   margin: 0 auto;
   padding: 1rem;
@@ -47,8 +48,6 @@ hr {
   background-image: linear-gradient(0deg, transparent 24%, rgba(0, 0, 0, .05) 25%, rgba(0, 0, 0, .05) 26%, transparent 27%, transparent 74%, rgba(0, 0, 0, .05) 75%, rgba(0, 0, 0, .05) 76%, transparent 77%, transparent), linear-gradient(90deg, transparent 24%, rgba(0, 0, 0, .05) 25%, rgba(0, 0, 0, .05) 26%, transparent 27%, transparent 74%, rgba(0, 0, 0, .05) 75%, rgba(0, 0, 0, .05) 76%, transparent 77%, transparent);
   background-size:60px 60px;
 }
-
-
 
 /* Trading Card */
 .trading-card {
@@ -70,12 +69,13 @@ hr {
 
 /* Trading Card Header */
 .trading-card-header {
-  /*padding: 0.5rem;*/
   border: 0px solid #111;
   border-radius: 0.1rem;
   font-family: Immortal, "Palatino Linotype", "Book Antiqua", Palatino, serif;
+  /*padding: 0.5rem;*/
 }
 
+/* Trading Card Title */
 .trading-card-title {
   padding: 0 0.15rem 0 0.15rem;
   color: #efefef;
@@ -84,11 +84,12 @@ hr {
   text-transform: uppercase;
   text-shadow: 0.025rem 0.025rem 0.05rem #111;
 }
-.trading-card-title::first-letter {
-  font-size: 1rem;
-  text-transform: uppercase;
+  .trading-card-title::first-letter {
+    font-size: 1rem;
+    text-transform: uppercase;
 }
 
+/* Trading Card Type */
 .trading-card-type {
   font-size: 0.66em;
   letter-spacing: 0.05rem;
@@ -97,39 +98,49 @@ hr {
   padding: 0 0.15rem 0 0.15rem;
   text-shadow: 0.025rem 0.025rem 0.05rem #111;
 }
+  .trading-card-type ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+  .trading-card-type li {
+    float: left;
+}
+  .trading-card-type li:not(:last-child):after {
+    content: " •\00a0";
+    font-size: 0.5rem;
+    /*content: " |\00a0";*/
+}
 
-.trading-card-type ul {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-}
-.trading-card-type li {
-  float: left;
-}
-.trading-card-type li:not(:last-child):after {
-  content: " •\00a0";
-  /*content: " |\00a0";*/
-  font-size: 0.5rem;
-}
-
+/* Trading Card Level */
 .trading-card-level {
   float: right;
   text-align: right;
-  font-family: Consolas,monaco,monospace;
-  font-size: 0.75rem;
+  font-family: Consolas, monaco, monospace;
+  font-size: 0.66rem;
   font-weight: bold;
-  /*text-decoration: underline;*/
-  /*line-height: 0.75rem;*/
   color: #efefef;
   text-shadow: 0.025rem 0.025rem 0.05rem #111;
+  /*text-decoration: underline;*/
+  /*line-height: 0.75rem;*/
 }
 
 /* Trading Card Body */
 .trading-card-body {
   margin: 0.5rem 0 0.5rem 0;
   border-radius: 0.1rem;
+  font-family: Immortal, "Palatino Linotype", "Book Antiqua", Palatino, serif;
+  font-size: 0.66rem;
+}
+  .trading-card-body .trading-card-text {
+    padding: 0.5rem 0.5rem 0 0.5rem;
+    line-height: 0.85rem;
+}
+  .trading-card-body .trading-card-text:last-of-type {
+    padding: 0 0.5rem 0.5rem 0.5rem;
 }
 
+/* Trading Card Image */
 .trading-card-image {
   width: 100%;
   height: 200px;
@@ -137,22 +148,24 @@ hr {
   box-shadow: 0rem 0rem 0.75rem #111;
   background: #ccc url(../img/placeholder.png) center center no-repeat /* backup for card image */
 }
-.trading-card-image img {
-  width: 100%;
-  max-width: 18.75rem;
-  height: auto;
+  .trading-card-image img {
+    width: 100%;
+    max-width: 18.75rem;
+    height: auto;
 }
 
+/* Trading Card Info */
 .trading-card-info {
-  /*border: 0.1rem solid #999;*/
   border: 0.15rem outset #888;
   margin: 0.5rem 0 0 0;
   font-size: 0.8rem;
-  /*padding: 0.5rem;*/
-  background: linear-gradient(0deg, hsla(46,55%,82%,0.66), hsla(46,55%,76%,1)), url(../img/parchment-texture.jpg) top left repeat;
+  background: linear-gradient(0deg, hsla(46,55%,82%,0.50), hsla(46,55%,76%,0.75)), url(../img/parchment-texture2.png) top left repeat;
   background-color: #efefef; /* fall back if no image is loaded */
+  /*border: 0.1rem solid #999;*/
+  /*padding: 0.5rem;*/
 }
 
+/* Trading Card Label */
 .trading-card-label {
   padding: 0;
   font-weight: bold;
@@ -160,108 +173,99 @@ hr {
   text-shadow: 0.025rem 0.025rem 0.05rem #999;
 }
 
+/* Trading Card Stats */
 .trading-card-stats {
-  padding: 0.5rem;
-  /*margin-bottom: 0.5rem;*/
+  padding: 0.25rem 0 0.25rem 0;
   list-style: none;
+  /*margin-bottom: 0.5rem;*/
+}
+  .trading-card-stats li {
+    float: left;
+    /*padding: 0.1rem;*/
+    /*margin: 0.1rem;*/
+    color: #444;
+    font-family: Consolas,monaco,monospace;
+    /*font-size: 0.9rem;*/
+    font-weight: bold;
+    text-align: center;
+    width: 25%;
+}
+  .trading-card-stats li:not(:last-child):after {
+    content: " \00a0|";
+    color: #999;
+}
+  .trading-card-stats li:nth-of-type(1) .trading-card-label {
+}
+  .trading-card-stats li:nth-of-type(2) .trading-card-label {
+}
+  .trading-card-stats li:nth-of-type(3) .trading-card-label {
+}
+  .trading-card-stats li:nth-of-type(4) .trading-card-label {
 }
 
-.trading-card-stats li {
-  float: left;
-  padding: 0.1rem;
-  /*margin: 0.1rem;*/
-  color: #444;
-  font-family: Consolas,monaco,monospace;
-  font-size: 0.9rem;
-  font-weight: bold;
-  text-align: center;
-  width: 25%;
-}
-.trading-card-stats li:not(:last-child):after {
-  content: " |";
-  color: #999;
-}
-.trading-card-stats li .trading-card-label {
-  -webkit-text-stroke: 0.075rem #333;
-  -moz-text-stroke: 0.075rem #333;
-  -o-text-stroke: 0.075rem #333;
-  text-stroke: 0.075rem #333;
-}
-.trading-card-stats li:nth-of-type(1) .trading-card-label {
-  /*color: #710C0C;*/
-  color: #038100;
-}
-.trading-card-stats li:nth-of-type(2) .trading-card-label {
-  color: #2039B8;
-}
-.trading-card-stats li:nth-of-type(3) .trading-card-label {
-  /*color: #B5A300;*/
-  color: #B81010;
-}
-.trading-card-stats li:nth-of-type(4) .trading-card-label {
-  /*color: #024E00;*/
-  color: #730572;
-}
-
+/* Trading Card List */
 .trading-card-list {
   /*padding: 0.5rem;*/
   padding: 0 0.5rem;
   margin: 0;
   list-style: none;
 }
-.trading-card-list li {
-  float: left;
-  /*padding: 0 0 0 1rem;*/
-  text-transform: capitalize;
-  text-align: center;
-  color: #333;
+  .trading-card-list li {
+    float: left;
+    /*padding: 0 0 0 1rem;*/
+    text-transform: capitalize;
+    text-align: center;
+    color: #333;
 }
-.trading-card-list li:nth-of-type(1) {
-  float: none;
-  font-weight: bold;
-  padding: 0;
-  text-align: left;
-  color: initial;
+  .trading-card-list li:nth-of-type(1) {
+    float: none;
+    padding: 0;
+    text-align: left;
+    color: initial;
 }
-.trading-card-list li:nth-of-type(2) {
-  padding: 0 0 0 1rem;
+  .trading-card-list li:nth-of-type(2) {
+    padding: 0 0 0 1.1rem;
 }
-.trading-card-list li:not(:first-of-type):after {
-  content: " •\00a0";
-  /*content: " |\00a0";*/
-  font-size: 0.5rem;
+  .trading-card-list li:not(:first-of-type):after {
+    content: " •\00a0";
+    font-size: 0.66rem;
 }
-.trading-card-list li:last-child:after {
-  content: "";
+  .trading-card-list li:last-child:after {
+    content: "";
+}
+  .trading-card-list li:not(:first-of-type) i.ra {
+    color: #fff;
+    -webkit-text-stroke: 0.05rem #666;
+    -moz-text-stroke: 0.05rem #666;
+    -o-text-stroke: 0.05rem #666;
+    text-stroke: 0.05rem #666;
 }
 
+/* Trading Card Text */
 .trading-card-text {
   padding: 0.5rem;
 }
+  .trading-card-text.flavor {
+    /*margin: 0.5rem 0;*/
+    font-style: italic;
+    color: #444;
+    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+}
+  .trading-card-text.flavor:before {content: '"';}
+  .trading-card-text.flavor:after {content: '"';}
 
-.trading-card-body .trading-card-text {
-  padding: 0 0.5rem 0 0.5rem;
+  .trading-card-text.legal {
+    font-size: 0.5rem;
+    padding: 0;
 }
-.trading-card-body .trading-card-text:first-of-type {
-  /*margin: 0.25rem 0 0 0;*/
+  .trading-card-text.legal a {
+    text-decoration: none;
+    color: inherit;
+    cursor: pointer;
 }
 
-.trading-card-text.flavor {
-  margin: 0.5rem 0;
-  font-style: italic;
-  color: #444;
-}
-.trading-card-text.flavor:before {content: '"';}
-.trading-card-text.flavor:after {content: '"';}
-
-.trading-card-text.legal {
-  font-size: 0.5rem;
-  padding: 0;
-}
-.trading-card-text.legal a {
-  text-decoration: none;
-  color: inherit;
-  cursor: pointer;
+.trading-card-set-symbol {
+  color: #ffda6a;
 }
 
 /* Trading Card Footer */
@@ -270,9 +274,9 @@ hr {
   text-shadow: 0.025rem 0.025rem 0.05rem #111;
   padding: 0;
 }
-.trading-card-footer .trading-card-label {
-  color: #efefef;
-  text-shadow: 0.025rem 0.025rem 0.05rem #111;
+  .trading-card-footer .trading-card-label {
+    color: #efefef;
+    text-shadow: 0.025rem 0.025rem 0.05rem #111;
 }
 
 /* Helper Classes */
@@ -280,3 +284,7 @@ hr {
 
 .float-left {float: left;}
 .float-right {float: right;}
+
+.ra {
+  vertical-align: middle;
+}
