--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,3 @@
-/**
- * File:    styles.css
- * Author:  Jordan Brauer <jbrauer.inc@gmail.com>
- * Created: 09/21/2016 <MM/DD/YYYY>
- */
 @charset "UTF-8";
 
 /* Set box-sizing to border-box for sizing/margin/padding consistency reasons */
@@ -12,7 +7,7 @@
 
 /* 0. reset default element margins & paddings */
 /* 1. set basic default styles. */
-:root{
+:root {
   font-size: 16px; /* 1. */
   font-family: Helvetica, Arial, sans-serif; /* 1. */
 }
@@ -45,41 +40,45 @@ hr {
   display: inline-block;
   box-shadow: 0.25rem 0.33rem 1rem #000;
   background-color: #efefef;
-  background-image: linear-gradient(0deg, transparent 24%, rgba(0, 0, 0, .05) 25%, rgba(0, 0, 0, .05) 26%, transparent 27%, transparent 74%, rgba(0, 0, 0, .05) 75%, rgba(0, 0, 0, .05) 76%, transparent 77%, transparent), linear-gradient(90deg, transparent 24%, rgba(0, 0, 0, .05) 25%, rgba(0, 0, 0, .05) 26%, transparent 27%, transparent 74%, rgba(0, 0, 0, .05) 75%, rgba(0, 0, 0, .05) 76%, transparent 77%, transparent);
-  background-size:60px 60px;
+  /**
+   * Experimental grid line drawing for the canvas background below.
+   * I like to try and create things using CSS/SCSS where possible over using images. Ultimately opted out for plain bg tho.
+   */
+  /*background-image: linear-gradient(0deg, transparent 24%, rgba(0, 0, 0, .05) 25%, rgba(0, 0, 0, .05) 26%, transparent 27%, transparent 74%, rgba(0, 0, 0, .05) 75%, rgba(0, 0, 0, .05) 76%, transparent 77%, transparent), linear-gradient(90deg, transparent 24%, rgba(0, 0, 0, .05) 25%, rgba(0, 0, 0, .05) 26%, transparent 27%, transparent 74%, rgba(0, 0, 0, .05) 75%, rgba(0, 0, 0, .05) 76%, transparent 77%, transparent);
+  background-size:60px 60px;*/
 }
 
 /* Trading Card */
 .trading-card {
   margin: 0.5rem;
   padding: 0.5rem;
-  width: calc(18.75rem + 1.85rem);
-  max-width: calc(18.75rem + 1.85rem);
-  height: auto;
   display: inline-block;
-  background: linear-gradient(0deg,rgba(9, 117, 0, 0.4),rgba(9, 117, 0, 0.4)), url(../img/fog-texture.png) top left repeat;
-  background-color: rgba(7, 96, 0, 0.61); /* fall back if no image is loaded */
+  overflow: hidden; /* Prevent runaway content. */
+  width: calc(18.75rem + 1.85rem);
+  max-width: calc(18.75rem + 1.85rem); /* Not really necessary, but I figured a constraint on the width with a hidden overflow is nice just in case. */
+  height: auto;
   border: 0.5rem solid #333;
   border-radius: 0.33rem;
   box-shadow: 0.25rem 0.33rem 1rem #666;
-  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
-  font-size: 1rem;
   text-align: left;
+  font-size: 1rem;
+  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+  background: linear-gradient(0deg,rgba(9, 117, 0, 0.4),rgba(9, 117, 0, 0.4)), url(../img/fog-texture.png) top left repeat;
+  background-color: rgba(7,96,0,0.61); /* fall back if no image is loaded */
 }
 
 /* Trading Card Header */
 .trading-card-header {
-  border: 0px solid #111;
+  border: 0rem solid transparent;
   border-radius: 0.1rem;
   font-family: Immortal, "Palatino Linotype", "Book Antiqua", Palatino, serif;
-  /*padding: 0.5rem;*/
 }
 
 /* Trading Card Title */
 .trading-card-title {
-  padding: 0 0.15rem 0 0.15rem;
+  padding: 0 0.15rem;
   color: #efefef;
-  font-size: 0.60rem;
+  font-size: 0.6rem;
   letter-spacing: 0.075rem;
   text-transform: uppercase;
   text-shadow: 0.025rem 0.025rem 0.05rem #111;
@@ -109,7 +108,6 @@ hr {
   .trading-card-type li:not(:last-child):after {
     content: " •\00a0";
     font-size: 0.5rem;
-    /*content: " |\00a0";*/
 }
 
 /* Trading Card Level */
@@ -121,8 +119,6 @@ hr {
   font-weight: bold;
   color: #efefef;
   text-shadow: 0.025rem 0.025rem 0.05rem #111;
-  /*text-decoration: underline;*/
-  /*line-height: 0.75rem;*/
 }
 
 /* Trading Card Body */
@@ -161,8 +157,6 @@ hr {
   font-size: 0.8rem;
   background: linear-gradient(0deg, hsla(46,55%,82%,0.50), hsla(46,55%,76%,0.75)), url(../img/parchment-texture2.png) top left repeat;
   background-color: #efefef; /* fall back if no image is loaded */
-  /*border: 0.1rem solid #999;*/
-  /*padding: 0.5rem;*/
 }
 
 /* Trading Card Label */
@@ -177,15 +171,12 @@ hr {
 .trading-card-stats {
   padding: 0.25rem 0 0.25rem 0;
   list-style: none;
-  /*margin-bottom: 0.5rem;*/
+
 }
   .trading-card-stats li {
     float: left;
-    /*padding: 0.1rem;*/
-    /*margin: 0.1rem;*/
     color: #444;
     font-family: Consolas,monaco,monospace;
-    /*font-size: 0.9rem;*/
     font-weight: bold;
     text-align: center;
     width: 25%;
@@ -205,14 +196,12 @@ hr {
 
 /* Trading Card List */
 .trading-card-list {
-  /*padding: 0.5rem;*/
   padding: 0 0.5rem;
   margin: 0;
   list-style: none;
 }
   .trading-card-list li {
     float: left;
-    /*padding: 0 0 0 1rem;*/
     text-transform: capitalize;
     text-align: center;
     color: #333;
@@ -246,7 +235,6 @@ hr {
   padding: 0.5rem;
 }
   .trading-card-text.flavor {
-    /*margin: 0.5rem 0;*/
     font-style: italic;
     color: #444;
     font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
